2005-12-02  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_finalize), (bacon_video_widget_new):
	  Clean up properly in finalize function and error out properly
	  when either the audiosink or the videosink is not available
	  at startup.

2005-12-01  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.in:
	* src/backend/gstscreenshot.c:
	  GStreamer-0.9 is dead, long live GStreamer-0.10! Grab the prerelease
	  now if you don't have it yet. Purge all mention of 0.9 and require
	  --enable-gstreamer=0.10.

2005-12-01  Andy Wingo  <wingo@pobox.com>

	* src/backend/bacon-video-widget-gst-0.10.c: gstvideosink.h, not
	videosink.h.

2005-11-28  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/Makefile.am: totem-disc.h is actually used in other
	applications, re-distribute (Closes: #322664)

2005-11-28  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-viewer.c: fix compilation with newer versions of
	D-Bus (Closes: #322436)

2005-11-28  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_handle_element_message), (got_time_tick), (bvw_element_msg_sync), 
	(bacon_video_widget_new):
	  Synchroneously handle prepare-xwindow-id element messages that are
	  emitted by xoverlay elements before they create their own window.
	  Should fix any remaining issues of the video window jumping out of
	  its frame.

2005-11-28  Wim Taymans  <wim@fluendo.com>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_seek_time):
	Use a keyframe seek.

2005-11-27  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_realize), (bacon_video_widget_expose_event):
	Set the bacon video widget background colour to black to 
	help with the nasty grey flashing effect on rapid window
	resizes.
	In the expose handler, bvw_update_interface_implementations 